@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.8087 2004/11/27 20:45:58 wiz Exp $
+$NetBSD: CHANGES,v 1.8088 2004/11/27 20:59:15 dmcmahill Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5549,3 +5549,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added qca-tls-1.0 [jdolecek 2004-11-27]
 	Updated icecast to 2.1.0 [wiz 2004-11-27]
 	Updated atlc to 4.6.0 [dmcmahill 2004-11-27]
+	Removed slsk [hubertf 2004-11-27]
